crates/glyph-cli/tests/corpus/valid/with_params.glyph
skill summarize_dir(scope = "." <"directory to summarize">, target = <"path where summary will be written">)
    description: "Summarize a directory's contents."

    flow:
        "Inspect files under {scope}."
        "Write the summary to {target}."
